--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,12 +1,17 @@
 server.address=localhost
-server.port=8080
+server.port=5000
 
 server.error.include-message=always
 
-server.ssl.enabled=false
 spring.jpa.hibernate.ddl-auto=update
 spring.sql.init.mode=
-spring.datasource.url=jdbc:postgresql://localhost:5432/url
+spring.datasource.url=jdbc:postgresql://localhost:5432/urlshortener
 spring.datasource.username=urlshortener
 spring.datasource.password=password
-spring.datasource.driver-class-name =org.postgresql.Driver
+#spring.datasource.driver-class-name=org.postgresql.Driver
+SPRING_JPA_DATABASE_PLATFORM=org.hibernate.dialect.PostgreSQL9Dialect
+
+backend.server.url=http://localhost:8080/
+frontend.server.url=http://localhost:3000/
+
+#jdbc:postgresql://aa1qei2fsfzy9rh.c7zjzkxj2qwb.ap-southeast-1.rds.amazonaws.com:5432/urlshortener
