--- a/frontend/src/config.json
+++ b/frontend/src/config.json
@@ -1,3 +1,3 @@
 {
-  "SERVER_HOST": "http://localhost:8080"
+  "SERVER_HOST": "http://urlshortenerapp-env.eba-itrzedmp.ap-southeast-1.elasticbeanstalk.com"
 }
