--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -11,7 +11,8 @@ spring.datasource.password=password
 #spring.datasource.driver-class-name=org.postgresql.Driver
 SPRING_JPA_DATABASE_PLATFORM=org.hibernate.dialect.PostgreSQL9Dialect
 
-backend.server.url=http://localhost:8080/
-frontend.server.url=http://localhost:3000/
+#backend.server.url=http://localhost:8080/
+#frontend.server.url=http://localhost:3000/
 
-#jdbc:postgresql://aa1qei2fsfzy9rh.c7zjzkxj2qwb.ap-southeast-1.rds.amazonaws.com:5432/urlshortener
+backend.server.url=https://go.smolurl.net/
+frontend.server.url=https://create.smolurl.net/
