--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,8 +11,8 @@ spring.datasource.password=password
 #spring.datasource.driver-class-name=org.postgresql.Driver
 SPRING_JPA_DATABASE_PLATFORM=org.hibernate.dialect.PostgreSQL9Dialect
 
-#backend.server.url=http://localhost:8080/
-#frontend.server.url=http://localhost:3000/
+#backend.server.url=https://go.smolurl.net/
+server.url=http://localhost:5000/
 
-backend.server.url=https://go.smolurl.net/
-frontend.server.url=https://create.smolurl.net/
+
+
